--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+appnope==0.1.3
 asttokens==2.4.0
 backcall==0.2.0
 bcrypt==4.0.1
@@ -7,14 +8,12 @@ click==8.1.7
 decorator==5.1.1
 dnspython==2.4.2
 email-validator==2.0.0.post2
-exceptiongroup==1.1.3
 executing==2.0.0
 Flask==2.3.3
 Flask-Bcrypt==1.0.1
 Flask-DebugToolbar @ git+https://github.com/pallets-eco/flask-debugtoolbar@3b25e114e96a03c3261f17becb10a41abb28fd7c
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
-greenlet==3.0.0
 gunicorn==21.2.0
 idna==3.4
 ipython==8.16.1
